--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.4",
     "react-app-polyfill": "^0.2.0",
+    "react-create": "^1.0.2",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.8.4",
     "resolve": "1.8.1",
