--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-create": "^1.0.2",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.8.4",
+    "react-notifications": "^1.4.3",
     "resolve": "1.8.1",
     "resolve-from": "^4.0.0",
     "resolve-from-npm": "^3.1.0",
